# fftx-demo-warpx-app

./: AnyFFT.H  CMakeLists.txt  README.md  WrapFFTX.cpp  fftx_plan.fftx.precompile.hpp  testwarpx.cu
